; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/soc/codecs/extr_tlv320aic3x.c_aic3x_unregister.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/soc/codecs/extr_tlv320aic3x.c_aic3x_unregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aic3x_priv = type { i32 }

@SND_SOC_BIAS_OFF = common dso_local global i32 0, align 4
@aic3x_dai = common dso_local global i32 0, align 4
@aic3x_codec = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.aic3x_priv*)* @aic3x_unregister to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @aic3x_unregister(%struct.aic3x_priv* %0) #0 {
  %2 = alloca %struct.aic3x_priv*, align 8
  store %struct.aic3x_priv* %0, %struct.aic3x_priv** %2, align 8
  %3 = load %struct.aic3x_priv*, %struct.aic3x_priv** %2, align 8
  %4 = getelementptr inbounds %struct.aic3x_priv, %struct.aic3x_priv* %3, i32 0, i32 0
  %5 = load i32, i32* @SND_SOC_BIAS_OFF, align 4
  %6 = call i32 @aic3x_set_bias_level(i32* %4, i32 %5)
  %7 = call i32 @snd_soc_unregister_dai(i32* @aic3x_dai)
  %8 = load %struct.aic3x_priv*, %struct.aic3x_priv** %2, align 8
  %9 = getelementptr inbounds %struct.aic3x_priv, %struct.aic3x_priv* %8, i32 0, i32 0
  %10 = call i32 @snd_soc_unregister_codec(i32* %9)
  %11 = load %struct.aic3x_priv*, %struct.aic3x_priv** %2, align 8
  %12 = call i32 @kfree(%struct.aic3x_priv* %11)
  store i32* null, i32** @aic3x_codec, align 8
  ret i32 0
}

declare dso_local i32 @aic3x_set_bias_level(i32*, i32) #1

declare dso_local i32 @snd_soc_unregister_dai(i32*) #1

declare dso_local i32 @snd_soc_unregister_codec(i32*) #1

declare dso_local i32 @kfree(%struct.aic3x_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
